--- a/SUBRATA_MONDAL_AgentInsights_Machine_Learning_Internship.ipynb
+++ b/SUBRATA_MONDAL_AgentInsights_Machine_Learning_Internship.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNLXpzMM1OBb9BTLarpMEkd",
+      "authorship_tag": "ABX9TyNJ4YykG3R+eIVCQfLqWypr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9963,7 +9963,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Summarization"
+        "- **transformers:** a library that provides state-of-the-art natural language processing models and tools\n",
+        "- **datasets:** a library that provides access to various natural language processing datasets\n",
+        "- **rouge-score:** a library that implements the ROUGE metrics for evaluating text summarization systems"
       ],
       "metadata": {
         "id": "cpUGulMZl0A9"
@@ -9972,6 +9974,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Use the pip command to install the following libraries:\n",
+        "# Use the -q option to suppress the output messages\n",
         "!pip install transformers datasets rouge-score -q"
       ],
       "metadata": {
@@ -10004,43 +10008,32 @@
     {
       "cell_type": "code",
       "source": [
+        "# Import the datasets library from Hugging Face\n",
         "from datasets import load_dataset\n",
-        "import torch"
-      ],
-      "metadata": {
-        "id": "X4wkX3_qmdnL"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "\n",
+        "# Import the torch library for deep learning\n",
+        "import torch\n",
+        "\n",
+        "# Check if a GPU is available and set the device accordingly\n",
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-        "device"
+        "# Print the device name\n",
+        "print(device)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "3Z2c8N4MmoPH",
-        "outputId": "f1cbdee4-1068-4b4d-90c2-cd53480030a9"
+        "id": "X4wkX3_qmdnL",
+        "outputId": "a4721f41-9fe1-42ed-856c-6f5c043f3286"
       },
-      "execution_count": 3,
+      "execution_count": 36,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'cuda'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 3
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cuda\n"
+          ]
         }
       ]
     },
@@ -10054,8 +10047,18 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- Use the `load_dataset` function to load the CNN/Daily Mail dataset. This dataset contains news articles and their summaries"
+      ],
+      "metadata": {
+        "id": "NfNcRusdJo4B"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Use the version 3.0.0 of the dataset, which has better quality and consistency\n",
         "dataset = load_dataset(\"cnn_dailymail\", version=\"3.0.0\")"
       ],
       "metadata": {
@@ -10590,8 +10593,32 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "GPT2 LLM is a model that can perform text summarization and other natural language processing tasks. Text summarization is the task of creating a short and concise summary of a longer text. GPT2 LLM stands for generative pre-trained transformer 2 language model, which describes its neural network architecture and pre-training strategy.\n",
+        "\n",
+        "- GPT2 LLM uses a standard sequence-to-sequence model with a decoder only. The decoder is a transformer, which is a neural network that can process long sequences of text using attention mechanisms. The decoder generates text one word at a time, using the previous words and the input text as input.\n",
+        "\n",
+        "- GPT2 LLM is pre-trained on a large corpus of text using a language modeling objective. This means that it learns to predict the next word in a sequence of words, given the previous words. This helps GPT2 LLM to learn general language skills and to generate fluent and coherent texts.\n",
+        "\n",
+        "- GPT2 LLM is particularly effective when fine-tuned for text generation tasks, such as summarization, translation, or dialogue. It can match or surpass the performance of other models, such as BERT or T5, on various benchmarks, such as GLUE, SQuAD, XSum, CNN/Daily Mail, ELI5, or ConvAI2.\n",
+        "\n",
+        "If you want to learn more about GPT2 LLM and how to use it for text summarization, you can check out some of these resources:\n",
+        "\n",
+        "- [Generating Text Summaries Using GPT-2 on PyTorch - Paperspace Blog](^4^): A blog post that shows how to use GPT2 LLM to generate summaries for different texts using PyTorch.\n",
+        "\n",
+        "- [How to Use LLMs to Generate Concise Summaries - Medium](^1^): A blog post that shows how to use GPT2 LLM to generate summaries for different texts using Google Cloud Platform.\n",
+        "\n",
+        "- [Language Models are Unsupervised Multitask Learners](^3^): A research paper that introduces the GPT2 LLM and its variants and shows its capabilities in various natural language processing tasks."
+      ],
+      "metadata": {
+        "id": "H9wI9Gb9YujL"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Import the pipeline and set_seed functions from the transformers library\n",
         "from transformers import pipeline, set_seed"
       ],
       "metadata": {
@@ -10601,16 +10628,37 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- The pipeline function creates a pipeline object that can perform various natural language processing tasks, such as text generation, summarization, translation, etc.\n",
+        "- The set_seed function sets the random seed for the pipeline object, which makes the results reproducible\n",
+        "\n",
+        "- The **gpt2-xl model** is a large and powerful model that can generate fluent and coherent texts\n",
+        "- **TL;DR** stands for Too Long; Didn't Read, and it is a way of asking for a short summary of a long text\n",
+        "- The **pipe** object will return a list of dictionaries, each containing a generated text and its score"
+      ],
+      "metadata": {
+        "id": "gQFLvziJKJl0"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Set the random seed for the pipeline object to 42, which makes the results reproducible\n",
         "set_seed(42)\n",
         "\n",
+        "# Create a pipeline object that can perform text generation using the gpt2-xl model\n",
         "pipe = pipeline(\"text-generation\", model=\"gpt2-xl\")\n",
         "\n",
+        "# Define a query for the text generation task, which consists of a sample text and a TL;DR prompt\n",
         "gpt2_query = sample_text + \"\\nTL;DR:\\n\"\n",
         "\n",
+        "# Use the pipe object to generate a text from the query, with a maximum length of 512 tokens and removing extra spaces\n",
         "pipe_out = pipe(gpt2_query, max_length=512, clean_up_tokenization_spaces=True)\n",
         "\n",
+        "# Extract the generated text from the first dictionary in the list and remove the query part\n",
+        "# Use the sent_tokenize function to split the generated text into sentences and join them with newlines\n",
+        "# Store the result in a dictionary called summaries, with the key \"gpt2\"\n",
         "summaries[\"gpt2\"] = \"\\n\".join(sent_tokenize(pipe_out[0][\"generated_text\"][len(gpt2_query) :]))"
       ],
       "metadata": {
@@ -10826,12 +10874,38 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "T5 LLM is a model that can perform text summarization and other natural language processing tasks. Text summarization is the task of creating a short and concise summary of a longer text. T5 LLM stands for text-to-text transfer transformer language model, which describes its neural network architecture and pre-training strategy.\n",
+        "\n",
+        "- T5 LLM uses a standard sequence-to-sequence model with an encoder and a decoder. The encoder and the decoder are both transformers, which are neural networks that can process long sequences of text using attention mechanisms. The encoder converts the input text into a sequence of hidden states, and the decoder generates the output text from the hidden states.\n",
+        "\n",
+        "- T5 LLM is pre-trained on a large corpus of text using a text-to-text objective. This means that it learns to convert any input text into any output text, such as summarization, translation, question-answering, etc. This helps T5 LLM to learn general language skills and to handle various tasks with the same model.\n",
+        "\n",
+        "- T5 LLM is particularly effective when fine-tuned for text generation tasks, such as summarization, translation, or dialogue. It can match or surpass the performance of other models, such as BERT or GPT-2, on various benchmarks, such as GLUE, SQuAD, XSum, CNN/Daily Mail, ELI5, or ConvAI2.\n",
+        "\n",
+        "\n",
+        "- The **t5-large model** is a large and powerful model that can generate summaries for various texts\n",
+        "- The **pipe** object will return a list of dictionaries, each containing a summary text and its score"
+      ],
+      "metadata": {
+        "id": "GyhpY1f2Nzle"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Import the pipeline function from the transformers library\n",
+        "from transformers import pipeline\n",
+        "# Create a pipeline object that can perform summarization using the t5-large model\n",
         "pipe = pipeline(\"summarization\", model=\"t5-large\")\n",
         "\n",
+        "# Use the pipe object to generate a summary for the sample text\n",
         "pipe_out = pipe(sample_text)\n",
         "\n",
+        "# Extract the summary text from the first dictionary in the list\n",
+        "# Use the sent_tokenize function to split the summary text into sentences and join them with newlines\n",
+        "# Store the result in a dictionary called summaries, with the key \"t5\"\n",
         "summaries[\"t5\"] = \"\\n\".join(sent_tokenize(pipe_out[0][\"summary_text\"]))"
       ],
       "metadata": {
@@ -10989,7 +11063,16 @@
       "cell_type": "markdown",
       "source": [
         "## BART\n",
-        "BART also uses an encoder-decoder architecture and is trained to reconstruct corrupted inputs. It combines the pretraining schemes of BERT and GPT-2. We'll use the facebook/bart-large-ccn checkpoint, which has been specifically fine-tuned on the CNN/DailyMail dataset."
+        "BART LLM is a model that can perform text summarization and other natural language processing tasks. Text summarization is the task of creating a short and concise summary of a longer text. BART LLM stands for bidirectional and autoregressive transformer language model, which describes its neural network architecture and pre-training strategy.\n",
+        "\n",
+        "- BART LLM uses a standard sequence-to-sequence model with an encoder and a decoder. The encoder is bidirectional, which means it can use the context from both sides of a word. The decoder is autoregressive, which means it generates text one word at a time, using the previous words as input.\n",
+        "\n",
+        "- BART LLM is pre-trained on a large corpus of text using a denoising objective. This means that it learns to reconstruct corrupted texts by applying various transformations, such as masking, deleting, or permuting words or sentences. This helps BART LLM to learn general language skills and to handle noisy or incomplete inputs.\n",
+        "\n",
+        "- BART LLM is particularly effective when fine-tuned for text generation tasks, such as summarization, translation, or dialogue. It can match or surpass the performance of other models, such as RoBERTa or GPT-2, on various benchmarks, such as GLUE, SQuAD, XSum, CNN/Daily Mail, ELI5, or ConvAI2.\n",
+        "\n",
+        "- The **facebook/bart-large-cnn model** is a large and powerful model that can generate summaries for various texts\n",
+        "- The **pipe** object will return a list of dictionaries, each containing a summary text and its score"
       ],
       "metadata": {
         "id": "sC86MYI_T1WW"
@@ -10998,10 +11081,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# Import the pipeline function from the transformers library\n",
+        "from transformers import pipeline\n",
+        "# Create a pipeline object that can perform summarization using the facebook/bart-large-cnn model\n",
         "pipe = pipeline(\"summarization\", model=\"facebook/bart-large-cnn\")\n",
         "\n",
+        "# Use the pipe object to generate a summary for the sample text\n",
         "pipe_out = pipe(sample_text)\n",
         "\n",
+        "# Extract the summary text from the first dictionary in the list\n",
+        "# Use the sent_tokenize function to split the summary text into sentences and join them with newlines\n",
+        "# Store the result in a dictionary called summaries, with the key \"bart\"\n",
         "summaries[\"bart\"] = \"\\n\".join(sent_tokenize(pipe_out[0][\"summary_text\"]))"
       ],
       "metadata": {
@@ -11287,8 +11377,19 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- The **evaluate library** provides a unified API for loading and using various evaluation metrics, such as ROUGE, BLEU, etc.\n"
+      ],
+      "metadata": {
+        "id": "M4o8LZcFQYLd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Use the pip command to install the evaluate library from Hugging Face\n",
+        "# Use the -q option to suppress the output messages\n",
         "!pip install evaluate -q"
       ],
       "metadata": {
@@ -11311,10 +11412,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- The **ROUGE metric** is a set of metrics for evaluating automatic summarization and machine translation systems\n"
+      ],
+      "metadata": {
+        "id": "ULqBUPwYRKCu"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Import the evaluate library from Hugging Face\n",
         "import evaluate\n",
+        "# Use the load function to load the ROUGE metric from the Hugging Face Hub\n",
         "rouge_metric = evaluate.load(\"rouge\")\n",
+        "# Use the description attribute to get a brief description of the metric\n",
         "rouge_metric.description"
       ],
       "metadata": {
@@ -11345,19 +11458,29 @@
     {
       "cell_type": "code",
       "source": [
+        "# Import the pandas library for data analysis\n",
         "import pandas as pd\n",
         "\n",
+        "# Get the reference summary from the dataset\n",
         "reference = dataset[\"train\"][1][\"highlights\"]\n",
+        "# Create an empty list to store the records of the ROUGE scores\n",
         "records = []\n",
         "\n",
+        "# Define a list of the ROUGE metrics to use\n",
         "rouge_names = [\"rouge1\", \"rouge2\", \"rougeL\", \"rougeLsum\"]\n",
+        "# Loop through the summaries dictionary, which contains the summaries generated by different models\n",
         "for model_name in summaries:\n",
         "  print(model_name)\n",
+        "  # Add the prediction and reference summary to the rouge_metric object, which computes the ROUGE scores\n",
         "  rouge_metric.add(prediction=summaries[model_name], reference=reference)\n",
+        "  # Compute and get the ROUGE scores as a dictionary\n",
         "  score = rouge_metric.compute()\n",
+        "  # Create a dictionary that contains only the ROUGE scores for each metric, without the precision and recall values\n",
         "  rouge_dict = dict((rn, score[rn]) for rn in rouge_names)\n",
+        "  # Append the rouge_dict to the records list\n",
         "  records.append(rouge_dict)\n",
         "\n",
+        "# Create a pandas DataFrame from the records list, using the model names as the index\n",
         "pd.DataFrame.from_records(records, index=summaries.keys())"
       ],
       "metadata": {
