initialized with poetry and added .py file

--- a/SUBRATA_MONDAL_AgentInsights_Machine_Learning_Internship.ipynb
+++ b/SUBRATA_MONDAL_AgentInsights_Machine_Learning_Internship.ipynb
@@ -642,6 +642,7 @@
     }
    ],
    "source": [
+    "# Checking\n",
     "string = \"The U.S. are a country. The U.N. is an organization.\"\n",
     "sent_tokenize(string)"
    ]
@@ -1463,7 +1464,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/84.1 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r",
+      "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/84.1 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\n",
       "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m84.1/84.1 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25h"
      ]
